Updated REST interface, bug fixes for update skops, implemented a simple map web interface to view the live train map

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 		<version.apache.httpcomponents.httpcore>4.4.5</version.apache.httpcomponents.httpcore>
 		<version.cache-api.plugin>1.0.0</version.cache-api.plugin>
 		<version.commons-configuration.plugin>2.1</version.commons-configuration.plugin>
+		<version.com.fasterxml.jackson>2.8.6</version.com.fasterxml.jackson>
 		
         <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -164,6 +165,49 @@
 				<version>0.0.3</version>
 			</dependency>
 			
+			
+			<dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-json-provider</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-base</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+            <!-- also need JAXB annotation support -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-jaxb-annotations</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jdk8</artifactId>
+                <version>${version.com.fasterxml.jackson}</version>
+            </dependency>
+	
         </dependencies>
     </dependencyManagement>
 
@@ -323,6 +367,23 @@
 		<dependency>
 			<groupId>de.topobyte</groupId>
 			<artifactId>osm4j-xml</artifactId>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jdk8</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jsr310</artifactId>
+		    <scope>provided</scope>
 		</dependency>
     </dependencies>
 
